- Corrected Spacing Bug (#22)
- Added correct typeface

--- a/src/common/styles/_helpers.scss
+++ b/src/common/styles/_helpers.scss
@@ -1,4 +1,13 @@
-// @dimentions
+/***************************************************************
+ * HELPER CLASSES
+ ***************************************************************/
 .full-height {
   height: 100%;
+}
+
+/***************************************************************
+ * MIXING
+ ***************************************************************/
+@mixin transition_slow($property, $time: .2s, $ease: ease-in-out){
+  transition: $property $time $ease;
 }
